@@ -1,16 +1,13 @@
 package org.dateroad.course.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import org.dateroad.course.dto.request.CoursePlaceGetReq;
 import org.dateroad.date.domain.Course;
 import org.dateroad.place.domain.CoursePlace;
 import org.dateroad.place.repository.CoursePlaceRepository;
-import org.springframework.scheduling.annotation.Async;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 
 @Service
 @RequiredArgsConstructor(access = AccessLevel.PROTECTED)
@@ -29,7 +26,7 @@ public class CoursePlaceService {
                         course,
                         placeReq.getSequence()
                 ))
-                .collect(Collectors.toList());
+                .toList();
         coursePlaceRepository.saveAll(coursePlaces);
     }
 }
